[package]
name = "nostd-interactive-terminal"
version = "0.1.1"
edition = "2021"
authors = ["Petr Gadorek <hahihula@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "An interactive terminal library for no_std embedded systems with line editing, history, and command parsing"
repository = "https://github.com/Hahihula/nostd-interactive-terminal"
keywords = ["embedded", "no_std", "terminal", "uart", "esp32"]
categories = ["embedded", "no-std"]

[dependencies]
heapless = "0.8"
embassy-sync = "0.6"
embassy-futures = "0.1"
embedded-io-async = "0.6"

[dev-dependencies]
# For testing and examples

[features]
default = []
ansi-support = []  # Enable ANSI escape code support for advanced features